# final-cut-pro-scene-detect

./: .editorconfig  .gitignore  Makefile  README.md  pyproject.toml  scenes_to_fcp.py  test.py
.github/workflows/: run-tests.yml
.run/: Test.run.xml
fcp-rubric/: 2997fps-rubric.fcpxml  60fps-rubric.fcpxml  README.md
fcp-rubric/2997fps-rubric-clips.fcpxmld/: Info.fcpxml
fcp-rubric/60fps-rubric-clips.fcpxmld/: Info.fcpxml
fcp-rubric/60fps-rubric-compound-clips.fcpxmld/: Info.fcpxml
fcp-rubric/60fps-rubric-markers.fcpxmld/: Info.fcpxml
fcpscene/: __init__.py  app_cli.py  app_gui.py  cuts_to_clips.py  detect_cuts.py  detect_scene_changes.py  detect_scene_cuts.py  event_bus.py  ffmpeg.py  stamps_to_clips.py  to_csv_clips.py  to_fcpxml_clips.py  to_fcpxml_compound_clips.py  to_fcpxml_markers.py  to_file_clips.py  utils.py  video_attr.py
fcpscene.app/: Info.plist  applet.icns  main.applescript
fixtures/: 2997fps.fcpxml  2997fps.mov  60fps.fcpxml  60fps.mov
homebrew/: fcpscene.rb
src/fcpscene/: __init__.py  app_cli.py  app_gui.py  cli.py  csv_clips.py  cuts_to_clips.py  detect_scene_cut_times.py  detect_scene_cuts.py  event_bus.py  fcpxml_clips.py  fcpxml_compound_clips.py  fcpxml_markers.py  gui.py  scenes_to_fcp.py  time_utils.py  to_fcpxml_clips.py  to_fcpxml_compound_clips.py  to_fcpxml_markers.py  utils.py  video_attr.py
tests/: test_format_seconds.py  test_is_intraframe_coded.py  test_scenes_to_fcp.py  test_video_attr.py
tests/fixtures/: 2997 fps.fcpxml  2997fps.fcpxml  60fps-clips.fcpxml  60fps-compound-clips.fcpxml  60fps-compound.fcpxml  (+4 more)
