[project]
name = "final-cut-pro-scene-detect"
version = "1.0.9"
description = "Generates a Final Cut Pro XML project with scene cuts from a video"
authors = [{ name = "Eric Fortis" }]
license = { text = "MIT" }
requires-python = ">=3.13"

[project.scripts]
fcpscene = "fcpscene.cli:main"
fcpscene-gui = "fcpscene.gui:GUI.run"
